--- a/index.html
+++ b/index.html
@@ -6,30 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <<link href="css\bootstrap.css" rel="stylesheet">
+    <link href="css\bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css\style.css">
 
     <title>The Indie Queast</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Hem</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+ <img src="img/logga.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" href="portfolio.html">Portfolio</a>
-        <a class="nav-link active" href="ommig.html">Om mig</a>
-        <a class="nav-link active" href="kontakt.html">Kontakt</a>
-      </div>
+
+    <div class="collapse navbar-collapse" id="navbarsExample07">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+
+      </ul>
     </div>
   </div>
 </nav>
-    
-
     <!-- Optional JavaScript; choose one of the two! -->
+ <img src="img/logga.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
