Jobbat med menyn och lagt till bild i webbens namn

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="css\bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css\style.css">
+    <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
 
     <title>The Indie Queast</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text2">
   <div class="container">
- <img src="img/logga.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+ <img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="75" height="75" class="d-inline-block align-text-top">
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,27 +23,27 @@
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Welcome</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Currliculum</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Find Us</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Apply</a>
         </li>
 
       </ul>
     </div>
   </div>
 </nav>
+
     <!-- Optional JavaScript; choose one of the two! -->
- <img src="img/logga.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
