bakgrund och utveckling av menyn

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>The Indie Queast</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text2">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-* text2 navbaren menystor">
   <div class="container">
- <img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="75" height="75" class="d-inline-block align-text-top">
+ <img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="50" height="50" class="d-inline-block align-text-top">
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
