fyllt index med innehåll

--- a/index.html
+++ b/index.html
@@ -43,23 +43,26 @@
           <a class="nav-link active" href="apply.html">Apply</a>
         </li>
 
-      </ul>
+      </ul><
     </div>
   </div>
 </nav>
 
-<div class="container marginner test text-center"> <!--Inte centrerat än-->
+<div class="container marginner test">
   <div class="row justify-content-center">
-    <div class="col-md-5 box m-3">Box 1</div>
-    <div class="col-md-5 m-3"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+    <div class="col-md-5 box m-4"><h2 class="paddingindex">A school for indie game development</h2><h4 class="paddingindex">The program starts August 16th and you can apply up until June 15th.</h4></div><!--Väljer att ha h4 istället för p eftersom att rutorna är relativt stora och det passar bättre enligt mif-->
+    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-md-5 box m-3">Box 3</div>
-    <div class="col-md-5 box m-3">Box 4</div>
+    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/bAKyYeMZvKg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+    <div class="col-md-5 box m-4"><h2 class="paddingindex">Two years in one year</h2><h4 class="paddingindex">Time is precious, and with our program we plan to make the most out of yours. It's going to be a tough but rewarding journey.</h4></div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-md-5 box m-3">Box 5</div>
-    <div class="col-md-5 box m-3 ">Box 6</div>
+    <div class="col-md-5 box m-4"><h2 class="paddingindex">Learn from the best</h2><h4 class="paddingindex">You're sharing the house with awesome game developers from all over the world. We're a big team that has each other's backs.
+</h4></div>
+    <div class="col-md-5 box m-4 "><h2 class="paddingindex">Personal responsibility
+</h2><h4 class="paddingindex">There's no tests or teachers hunting you. If you're going to succeed, you're going to want to study hard.
+</h4></div>
   </div>
 </div>
 
