--- a/findus.html
+++ b/findus.html
@@ -48,9 +48,12 @@
   </div>
 </nav>
 
-<div class="container marginner">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+<div class="container marginner test text-center">
+  <div class="row justify-content-center">
+    <div class="col-md-6 box">Box 1</div>
+    <div class="col-md-6 box"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div></div>
+  </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
