--- a/findus.html
+++ b/findus.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/>
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
@@ -20,7 +20,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
   <div class="container">
- <img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top">
+ <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -48,10 +48,21 @@
   </div>
 </nav>
 
-<div class="container marginner test text-center">
+<div class="container marginner">
   <div class="row justify-content-center">
-    <div class="col-md-6 box">Box 1</div>
-    <div class="col-md-6 box"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div></div>
+     <div class="col-md-8 boxfind"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    <div class="col-md-4 boxfind">
+      <h3 class="paddingfind">Spelkollektivet</h3>
+      <p>Gamla vägen 12</p><p>362 51 Väckelsång</p>
+      <h4 class="paddingcontact">Contact us</h4>
+      <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo.png" alt="Facbook logo with link" width="40" height="40"></a>
+      <a class="paddinglogo" href="https://discord.gg/YBq4xYX"><img src="img/discord_logo.png" alt="Discord logo with link" width="40" height="40"></a>
+      <ul>
+        <li><p>contact@theindiequest.com</p></li>
+        <li><p>0701 - 72 99 88</p></li>
+      </ul>
+    </div>
+  </div>
   </div>
 
 
