--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/>
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
@@ -20,7 +20,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
   <div class="container">
- <img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top">
+<a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a><!--gjort så att det går att klicka på länken och komma tillbaka till startsidan-->
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,7 +43,7 @@
           <a class="nav-link active" href="apply.html">Apply</a>
         </li>
 
-      </ul><
+      </ul>
     </div>
   </div>
 </nav>
