--- a/apply.html
+++ b/apply.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="css\bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
     <title>Apply</title><!--Olika beroende på vilken sida-->
   </head>
-  <body class="backgrundindex"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
+  <body class="bakgrundapply"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
   <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
   <div class="container">
@@ -88,8 +88,8 @@
       <td class="paddingaplly"><input type="text" name="epost" id="epost"> </td>
     </tr>
     <tr>
-      <td class="paddingaplly"><label for="hurkontakt">Hur vill du bli kontaktat?*</label></td>
-      <td class="paddingaplly"><select id="hurkontakt" name="hurkontakt" required>
+      <td class="paddingaplly"><label for="hurkontakt">Hur vill du bli kontaktat?*</label></td><!--Blev fel i valideringen med W3 därför tog jag bort required, detta betyder att om inget annat vals blir det telefon-->
+      <td class="paddingaplly"><select id="hurkontakt" name="hurkontakt">
         <option value="telefon">Telefon</option>
         <option value="E-post">E-post</option>
         <option value="sms">SmS</option>
@@ -104,7 +104,7 @@
     </tr>
     <tr>
       <td class="paddingaplly"></td>
-      <td class="paddingaplly"><input type="text" placeholder="Välj Medborgarskap" name="medborgarskap_input" id="medborgarskap_input" value="sverige" required></td><!--vill att denna ska försvinna när sverige är bestämnt -->
+      <td class="paddingaplly"><input type="text" placeholder="Välj Medborgarskap" name="medborgarskap_input" id="medborgarskap_input" value="sverige" required></td><!--Denna försvinner när sverige är bestämmt-->
     </tr>
    </table>
      <div class="text-center">
@@ -123,12 +123,5 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
