--- a/findus.html
+++ b/findus.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="css\bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
     <title>Find Us</title><!--Olika beroende på vilken sida-->
   </head>
-  <body class="backgrundindex"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
+  <body class="bakgrundfindus"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
   <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
   <div class="container">
@@ -48,15 +48,15 @@
   </div>
 </nav>
 
-<div class="container marginner">
+<div class="container marginner"><!--väljer att använda lg istället för md eftersom att jag tycker att det passar bättre och eposten går inte utanför boxen-->
   <div class="row justify-content-center">
-     <div class="col-md-8 boxfind"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-    <div class="col-md-4 boxfind">
+     <div class="col-lg-8 boxfind"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="border w-100"></iframe></div><!--När height och width var 100% så gnällde w3 validator, därför använder jag klassen w-100 och bestämde en height som passade bra.-->
+    <div class="col-lg-4 boxfind">
       <h3 class="paddingfind">Spelkollektivet</h3>
       <p>Gamla vägen 12</p><p>362 51 Väckelsång</p>
       <h4 class="paddingcontact">Contact us</h4>
-      <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo.png" alt="Facbook logo with link" width="40" height="40"></a>
-      <a class="paddinglogo" href="https://discord.gg/YBq4xYX"><img src="img/discord_logo.png" alt="Discord logo with link" width="40" height="40"></a>
+     <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo_pixabay.png" alt="Facbook logo with link" width="40" height="40"></a><!--källa från pixabay -->
+      <a class="paddinglogo" href="https://discord.gg/YBq4xYX"><img src="img/discord_logo_pixabay.png" alt="Discord logo with link" width="40" height="40"></a>
       <ul>
         <li><p>contact@theindiequest.com</p></li>
         <li><p>0701 - 72 99 88</p></li>
@@ -71,12 +71,5 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
