--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="css\bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
-    <!-- Länkar in google fonten Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+   <!-- Länkar in google fonten Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
     <title>The Indie Queast</title>
   </head>
-  <body class="backgrundindex"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
+  <body class="bakgrundindex"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
   <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
   <div class="container">
@@ -50,11 +50,11 @@
 
 <div class="container marginner test">
   <div class="row justify-content-center">
-    <div class="col-md-5 box m-4"><h2 class="paddingindex">A school for indie game development</h2><h4 class="paddingindex">The program starts August 16th and you can apply up until June 15th.</h4></div><!--Väljer att ha h4 istället för p eftersom att rutorna är relativt stora och det passar bättre enligt mif-->
-    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+    <div class="col-md-5 box m-4"><h2 class="paddingindex">A school for indie game development</h2><h4 class="paddingindex">The program starts August 16th and you can apply up until June 15th.</h4></div><!--Väljer att ha h4 istället för p eftersom att rutorna är relativt stora och det passar bättre enligt mig-->
+    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/bAKyYeMZvKg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/bAKyYeMZvKg?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
     <div class="col-md-5 box m-4"><h2 class="paddingindex">Two years in one year</h2><h4 class="paddingindex">Time is precious, and with our program we plan to make the most out of yours. It's going to be a tough but rewarding journey.</h4></div>
   </div>
   <div class="row justify-content-center">
@@ -71,12 +71,5 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
