slutgiltig commit, buggfixar efter validering

--- a/findus.html
+++ b/findus.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+  <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
@@ -18,44 +18,44 @@
   </head>
   <body class="bakgrundfindus"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
-  <div class="container">
- <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
+      <div class="container">
+       <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster-->
-        <li class="nav-item active">
-          <a class="nav-link active" href="index.html">Welcome</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="about.html">About</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="curriculum.html">Curriculum</a>
-        </li>
+      <div class="collapse navbar-collapse" id="navbarsExample07">
+        <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster-->
+          <li class="nav-item active">
+            <a class="nav-link active" href="index.html">Welcome</a>
+          </li>
           <li class="nav-item">
-          <a class="nav-link active" href="findus.html">Find Us</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="apply.html">Apply</a>
-        </li>
+            <a class="nav-link active" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="curriculum.html">Curriculum</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="findus.html">Find Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="apply.html">Apply</a>
+          </li>
 
-      </ul>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<div class="container marginner"><!--väljer att använda lg istället för md eftersom att jag tycker att det passar bättre och eposten går inte utanför boxen-->
-  <div class="row justify-content-center">
-     <div class="col-lg-8 boxfind"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2193.8647182090863!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656bffc20bde36b%3A0x55b9bbd56eb984a5!2sSpelkollektivet!5e0!3m2!1ssv!2sse!4v1683489644457!5m2!1ssv!2sse" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="border w-100"></iframe></div><!--När height och width var 100% så gnällde w3 validator, därför använder jag klassen w-100 och bestämde en height som passade bra.-->
-    <div class="col-lg-4 boxfind">
+  <div class="container marginner"><!--väljer att använda lg istället för md eftersom att jag tycker att det passar bättre och eposten går inte utanför boxen-->
+    <div class="row justify-content-center">
+     <div class="col-lg-8 boxfind"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2676.629220002492!2d14.91330617719045!3d56.64219192313893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4656e6b979ee8f03%3A0xd7c05e41bd037f9a!2zTcOlc3bDpGdlbiA2LCAzNjIgNTEgVsOkY2tlbHPDpW5n!5e1!3m2!1ssv!2sse!4v1684249103857!5m2!1ssv!2sse" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="border w-100"></iframe></div><!--När height och width var 100% så gnällde w3 validator, därför använder jag klassen w-100 och bestämde en height som passade bra.-->
+     <div class="col-lg-4 boxfind">
       <h3 class="paddingfind">Spelkollektivet</h3>
       <p>Gamla vägen 12</p><p>362 51 Väckelsång</p>
       <h4 class="paddingcontact">Contact us</h4>
-     <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo_pixabay.png" alt="Facbook logo with link" width="40" height="40"></a><!--källa från pixabay -->
+      <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo_pixabay.png" alt="Facbook logo with link" width="40" height="40"></a><!--källa från pixabay -->
       <a class="paddinglogo" href="https://discord.gg/YBq4xYX"><img src="img/discord_logo_pixabay.png" alt="Discord logo with link" width="40" height="40"></a>
       <ul>
         <li><p>contact@theindiequest.com</p></li>
@@ -63,13 +63,13 @@
       </ul>
     </div>
   </div>
-  </div>
+</div>
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+<!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-  </body>
+<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+</body>
 </html>
