--- a/apply.html
+++ b/apply.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+  <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
     <!-- Länkar in google fonten Montserrat -->
@@ -18,110 +18,117 @@
   </head>
   <body class="bakgrundapply"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
-  <div class="container">
- <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster-->
-        <li class="nav-item active">
-          <a class="nav-link active" href="index.html">Welcome</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="about.html">About</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="curriculum.html">Curriculum</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link active" href="findus.html">Find Us</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="apply.html">Apply</a>
-        </li>
-
-      </ul>
-    </div>        
-  </div>
-</nav>
-<!--form-->
-<div class="container boxapply marginner">
-  <form>
-   <table class="m-auto">
-     <tr>
-      <td class="paddingaplly"><label for="personnummer">Personnummer*</label></td><!--Lägger till en "for" för att det ska vara bra för skärmläsare vilket gör sidan mer tillgänglig. Detta gör även så när man klickar på texten förflyttas man till rutan-->
-      <td class="paddingaplly"><input type="text" placeholder="ÅÅÅÅMMDD-XXXX" name="personnummer" id="personnummer" required> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="förnamn">Förnamn*</label></td>
-      <td class="paddingaplly"><input type="text" name="förnamn" id="förnamn" required> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="efternamn">Efternamn*</label></td>
-      <td class="paddingaplly"><input type="text" name="efternamn" id="efternamn" required> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="co">C/O</label></td>
-      <td class="paddingaplly"><input type="text" name="co" id="co"> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="adress">Adress*</label></td>
-      <td class="paddingaplly"><input type="text" name="adress" id="adress" required> </td>
-    </tr>
-     <tr>
-      <td class="paddingaplly"><label for="postnummer">Postnummer*</label></td>
-      <td class="paddingaplly"><input type="text" name="postnummer" id="postnummer" required> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="ort">Ort*</label></td>
-      <td class="paddingaplly"><input type="text" name="ort" id="ort" required> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="telefon">Telefon</label></td>
-      <td class="paddingaplly"><input type="text" name="telefon" id="telefon"> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="epost">E-Post</label></td>
-      <td class="paddingaplly"><input type="text" name="epost" id="epost"> </td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="hurkontakt">Hur vill du bli kontaktat?*</label></td><!--Blev fel i valideringen med W3 därför tog jag bort required, detta betyder att om inget annat vals blir det telefon-->
-      <td class="paddingaplly"><select id="hurkontakt" name="hurkontakt">
-        <option value="telefon">Telefon</option>
-        <option value="E-post">E-post</option>
-        <option value="sms">SmS</option>
-      </select></td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"><label for="medborgarskap">Medborgarskap</label></td>
-      <td class="paddingaplly"><select id="medborgarskap" name="medborgarskap" onchange="set_show_medborgarskap_input(this.value);">
-        <option value="svensk">Svensk</option>
-        <option value="other">Annat (Ange)</option>
-      </select></td>
-    </tr>
-    <tr>
-      <td class="paddingaplly"></td>
-      <td class="paddingaplly"><input type="text" placeholder="Välj Medborgarskap" name="medborgarskap_input" id="medborgarskap_input" value="sverige" required></td><!--Denna försvinner när sverige är bestämmt-->
-    </tr>
-   </table>
-     <div class="text-center">
-      <button class="btn btn-dark">
-          Skicka
+    <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
+      <div class="container">
+       <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-        </div>
+
+      <div class="collapse navbar-collapse" id="navbarsExample07">
+        <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster-->
+          <li class="nav-item active">
+            <a class="nav-link active" href="index.html">Welcome</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="curriculum.html">Curriculum</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="findus.html">Find Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="apply.html">Apply</a>
+          </li>
+
+        </ul>
+      </div>        
+    </div>
+  </nav>
+  <!--form-->
+  <div class="container boxapply marginner overflow-hidden"><!--Använder overflow-hidden eftersom att i absolut minsta formatet så stack rutorna ut utanför-->
+    <form>
+     <table class="m-auto">
+       <tr>
+        <td class="paddingaplly"><label for="personnummer">Personnummer*</label></td><!--Lägger till en "for" för att det ska vara bra för skärmläsare vilket gör sidan mer tillgänglig. Detta gör även så när man klickar på texten förflyttas man till rutan-->
+        <td class="paddingaplly"><input type="text" placeholder="ÅÅÅÅMMDD-XXXX" name="personnummer" id="personnummer" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="förnamn">Förnamn*</label></td>
+        <td class="paddingaplly"><input type="text" name="förnamn" id="förnamn" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="efternamn">Efternamn*</label></td>
+        <td class="paddingaplly"><input type="text" name="efternamn" id="efternamn" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="co">C/O</label></td>
+        <td class="paddingaplly"><input type="text" name="co" id="co"> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="adress">Adress*</label></td>
+        <td class="paddingaplly"><input type="text" name="adress" id="adress" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="postnummer">Postnummer*</label></td>
+        <td class="paddingaplly"><input type="text" name="postnummer" id="postnummer" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="ort">Ort*</label></td>
+        <td class="paddingaplly"><input type="text" name="ort" id="ort" required> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="telefon">Telefon</label></td>
+        <td class="paddingaplly"><input type="text" name="telefon" id="telefon"> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="epost">E-Post</label></td>
+        <td class="paddingaplly"><input type="text" name="epost" id="epost"> </td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="hurkontakt">Hur vill du bli kontaktat?*</label></td><!--Blev fel i valideringen med W3 därför tog jag bort required, detta betyder att om inget annat vals blir det telefon-->
+        <td class="paddingaplly"><select id="hurkontakt" name="hurkontakt">
+          <option value="telefon">Telefon</option>
+          <option value="E-post">E-post</option>
+          <option value="sms">SmS</option>
+        </select></td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"><label for="medborgarskap">Medborgarskap</label></td>
+        <td class="paddingaplly"><select id="medborgarskap" name="medborgarskap" onchange="set_show_medborgarskap_input(this.value);">
+          <option value="svensk">Svensk</option>
+          <option value="other">Annat (Ange)</option>
+        </select></td>
+      </tr>
+      <tr>
+        <td class="paddingaplly"></td>
+        <td class="paddingaplly"><input type="text" placeholder="Välj Medborgarskap" name="medborgarskap_input" id="medborgarskap_input" value="sverige" required></td><!--Denna försvinner när annat inte är bestämt -->
+      </tr>
+    </table>
+    <div class="text-center">
+      <button class="btn btn-dark">
+        Skicka
+      </button>
+    </div>
   </form>
 </div>
 
 <script src="js/apply.js"></script><!--Länkar in javacript vid namn apply.js-->
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+<!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+  -->
+</body>
 </html>
