--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+  <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/IQ_Logo_White_Simple.png"> <!--Lägger i en logga i fliken länst upp -->
-   <!-- Länkar in google fonten Montserrat -->
+    <!-- Länkar in google fonten Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
@@ -18,53 +18,53 @@
   </head>
   <body class="bakgrundindex"><!--Gör här så att det går att ha olika bilder beroende på vilken sida det är, osäker på om detta kommer att användas-->
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-* text2 navbaren menystor fixed-top">
-  <div class="container">
-<a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a><!--gjort så att det går att klicka på länken och komma tillbaka till startsidan-->
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-md navbar-dark text2 navbaren menystor fixed-top">
+      <div class="container">
+        <a href="index.html"><img src="img/IQ_Logo_White_Roof.png" alt="Indie Queast logo" width="70" height="70" class="d-inline-block align-top"></a><!--gjort så att det går att klicka på länken och komma tillbaka till startsidan-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster -->
-        <li class="nav-item active">
-          <a class="nav-link active" href="index.html">Welcome</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="about.html">About</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="curriculum.html">Curriculum</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link active" href="findus.html">Find Us</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="apply.html">Apply</a>
-        </li>
+        <div class="collapse navbar-collapse" id="navbarsExample07">
+          <ul class="navbar-nav ms-auto mb-2 mg-lg-0"> <!--Bytte här så att valen väljs på höger sida istället för vänster -->
+            <li class="nav-item active">
+              <a class="nav-link active" href="index.html">Welcome</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="curriculum.html">Curriculum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="findus.html">Find Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="apply.html">Apply</a>
+            </li>
 
-      </ul>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container marginner test">
+      <div class="row justify-content-center">
+        <div class="col-md-5 box m-4"><h2 class="paddingindex">A school for indie game development</h2><h4 class="paddingindex">The program starts August 16th and you can apply up until June 15th.</h4></div><!--Väljer att ha h4 istället för p eftersom att rutorna är relativt stora och det passar bättre enligt mig gör det också mer tydligt -->
+        <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/bAKyYeMZvKg?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
+        <div class="col-md-5 box m-4"><h2 class="paddingindex">Two years in one year</h2><h4 class="paddingindex">Time is precious, and with our program we plan to make the most out of yours. It's going to be a tough but rewarding journey.</h4></div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-5 box m-4"><h2 class="paddingindex">Learn from the best</h2><h4 class="paddingindex">You're sharing the house with awesome game developers from all over the world. We're a big team that has each other's backs.
+        </h4></div>
+        <div class="col-md-5 box m-4 "><h2 class="paddingindex">Personal responsibility
+        </h2><h4 class="paddingindex">There's no tests or teachers hunting you. If you're going to succeed, you're going to want to study hard.
+        </h4></div>
+      </div>
     </div>
-  </div>
-</nav>
-
-<div class="container marginner test">
-  <div class="row justify-content-center">
-    <div class="col-md-5 box m-4"><h2 class="paddingindex">A school for indie game development</h2><h4 class="paddingindex">The program starts August 16th and you can apply up until June 15th.</h4></div><!--Väljer att ha h4 istället för p eftersom att rutorna är relativt stora och det passar bättre enligt mig-->
-    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/u31qwQUeGuM?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-md-5 m-4 boxgenomskinlig"><div class="video-container"><iframe class="video embed-responsive-item" src="https://www.youtube.com/embed/bAKyYeMZvKg?controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div></div>
-    <div class="col-md-5 box m-4"><h2 class="paddingindex">Two years in one year</h2><h4 class="paddingindex">Time is precious, and with our program we plan to make the most out of yours. It's going to be a tough but rewarding journey.</h4></div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-md-5 box m-4"><h2 class="paddingindex">Learn from the best</h2><h4 class="paddingindex">You're sharing the house with awesome game developers from all over the world. We're a big team that has each other's backs.
-</h4></div>
-    <div class="col-md-5 box m-4 "><h2 class="paddingindex">Personal responsibility
-</h2><h4 class="paddingindex">There's no tests or teachers hunting you. If you're going to succeed, you're going to want to study hard.
-</h4></div>
-  </div>
-</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -72,4 +72,4 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   </body>
-</html>
+  </html>
