Komplitering, länkar fixade apply fixat

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <h2> More than a school</h2>
     <p> Another unique advantage of The Indie Quest, besides the specialized curriculum, is learning and working within a community of many professional indie game developers. Spelkollektivet, where the school takes place, is the largest co-living and co-working space for game developers from all over the world. You will be part of a friendly, supportive community that shares the love for gaming and creating games, including all the social and professional development activities that happen in the house.
     </p>
-    <a href="https://www.spelkollektivet.com" class="svart">Click here to learn more about Spelkollektivet</a>
+    <a href="https://www.spelkollektivet.com" target=”_blank” class="svart">Click here to learn more about Spelkollektivet</a>
   </div>
 </div>
 </div>
