--- a/findus.html
+++ b/findus.html
@@ -55,8 +55,8 @@
       <h3 class="paddingfind">Spelkollektivet</h3>
       <p>Gamla vägen 12</p><p>362 51 Väckelsång</p>
       <h4 class="paddingcontact">Contact us</h4>
-      <a class="paddinglogo" href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo_pixabay.png" alt="Facbook logo with link" width="40" height="40"></a><!--källa från pixabay -->
-      <a class="paddinglogo" href="https://discord.gg/YBq4xYX"><img src="img/discord_logo_pixabay.png" alt="Discord logo with link" width="40" height="40"></a>
+      <a class="paddinglogo" target=”_blank” href="https://www.facebook.com/theindiequest"><img src="img/facebook_logo_pixabay.png" alt="Facbook logo with link" width="40" height="40"></a><!--källa från pixabay -->
+      <a class="paddinglogo" target=”_blank” href="https://discord.gg/YBq4xYX"><img src="img/discord_logo_pixabay.png" alt="Discord logo with link" width="40" height="40"></a>
       <ul>
         <li><p>contact@theindiequest.com</p></li>
         <li><p>0701 - 72 99 88</p></li>
